--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     // Add the Google services Gradle plugin
-    id 'com.google.gms.google-services' version 4.3.14
+    id 'com.google.gms.google-services'
 }
 
 android {
