--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,20 +5,29 @@ on:
     branches: '**'
 
 jobs:
-  build:
-
+  build-gradle-project:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-      - name: set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: gradle
+    - name: Checkout project sources
+      uses: actions/checkout@v3
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+    - name: Run build with Gradle Wrapper
+      run: ./gradlew build
+  # build:
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Build with Gradle
-        run: ./gradlew build
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: set up JDK 11
+  #       uses: actions/setup-java@v3
+  #       with:
+  #         java-version: '17'
+  #         distribution: 'temurin'
+  #         cache: gradle
+
+  #     - name: Grant execute permission for gradlew
+  #       run: chmod +x gradlew
+  #     - name: Build with Gradle
+  #       run: ./gradlew build
