--- a/build.gradle
+++ b/build.gradle
@@ -5,3 +5,6 @@ plugins {
     // Add the dependency for the Google services Gradle plugin
     id 'com.google.gms.google-services' version '4.4.0' apply false
 }
+dependencies {
+    classpath 'com.google.gms:google-services:4.4.0'
+}
