--- a/build.gradle
+++ b/build.gradle
@@ -3,5 +3,5 @@ plugins {
     id 'com.android.application' version '7.4.0' apply false
     id 'com.android.library' version '7.4.0' apply false
     // Add the dependency for the Google services Gradle plugin
-    id 'com.google.gms.google-services' version '4.4.0' apply false
+    // id 'com.google.gms.google-services' version '4.4.0' apply false
 }
