--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,35 +1,19 @@
 name: Android CI
 
 on:
-  push:
-    branches: '**'
+  - push
 
 jobs:
-  build-gradle-project:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout project sources
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'zulu'
+        java-version: 17
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Run build with Gradle Wrapper
-      run: ./gradlew build
-  # build:
-
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: set up JDK 11
-  #       uses: actions/setup-java@v3
-  #       with:
-  #         java-version: '17'
-  #         distribution: 'temurin'
-  #         cache: gradle
-
-  #     - name: Grant execute permission for gradlew
-  #       run: chmod +x gradlew
-  #     - name: Build with Gradle
-  #       run: ./gradlew build
+    - name: Build with Gradle
+      run: ./gradlew clean ktlint assemble
