--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,5 +15,7 @@ jobs:
         java-version: 17
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew clean ktlint assemble
