--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:name=".Home"
             android:exported="false" />
         <activity
-            android:name=".splashscree"
+            android:name=".splashscreen"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
